# fix-google-takeout

./: .gitignore  Readme.md  pyproject.toml  requirements.in  requirements.txt
fixgoogle/: __main__.py
fixgt/: __main__.py
src/: main.py
