[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fix-google-takeout"
version = "0.0.1"
dependencies = ["pyexiftool==0.5.6", "python-dateutil==2.8.2", "packaging==23.2"]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["fixgt"]

[project.scripts]
fixgt = "fixgt.__main__:main"
